# djangoProjectGraphQL

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme.md  requirements.txt  run_format.sh
app2/: models.py
app2/migrations/: 0001_initial.py  0002_fill_examples_dataset.py
auto_graphql/: apps.py  mapper.py  setup.py
blog/migrations/: 0001_initial.py  0002_fill_examples_dataset.py
book_catalogue/: apps.py  models.py
book_catalogue/migrations/: 0001_initial.py  0002_fill_examples_dataset.py
djangoProject/: settings.py  urls.py
djangoProject/lib/: django_model_mapper.py  django_model_mapper_recursive.py  strawberry_schema_generator.py  strawberry_schema_generator2.py  strawberry_schema_generator_recursive.py
djangoProject/services/: graphql_query_scanner.py  strawberry_model_mapper.py  strawberry_schema_generator.py
project_root/: asgi.py  settings.py  wsgi.py
test_django_graphql/: apps.py  models.py
test_django_graphql/migrations/: 0001_initial.py  0002_fill_examples_dataset.py
zorgs/: apps.py  models.py
zorgs/migrations/: 0001_initial.py  0002_fill_examples_dataset.py
