[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Аркадий <chuark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
django = "^4.2.6"
strawberry-graphql = "^0.211.1"
strawberry-graphql-django = "^0.21.0"
django-environ = "^0.11.2"
inflection = "^0.5.1"
gunicorn = "^21.2.0"
isort = "^5.12.0"
black = "^23.10.1"
mypy = "^1.6.1"
django-stubs = "^4.2.6"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
wrap_length = 120
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "djangoProject.settings"
